tests/cases/parser/misc/unclosed_parens.hash
// run=fail, stage=parse

t := () => {
    ((a)
};
